--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ layout: default
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
             <h2 class="header-light regular-pad">About RAPA</h2>
-              <p class="lead">Verification techniques try to analyze
+              <p class="lead"><b>Short version:</b> Verification techniques try to analyze
               software (or hardware) for bugs: behaviors that are
               unexpected, unwanted, and can cause the software to end
               up in an unworkable state, crash, or simply compute
@@ -24,13 +23,13 @@ layout: default
               resources. How do changes (especially incremental
               changes) of the resource parameter affect the behavior
               of the software?</p> 
-        </div>
-        <div class="col-md-6 text-center">
+        <!--div class="col-md-6 text-center">
             <img src="img/jekyll-dark.png" alt="" class="img-responsive">
-        </div>
+        </div-->
     </div>
     <hr>
     <div class="row">
+      <!--
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
             <h3 class="text-center">Easy to install and publish</h3>
@@ -47,14 +46,28 @@ layout: default
             <h3 class="text-center">Git-based source control</h3>
             <p></p>
         </div>
+      -->
+           <p>
+            <b>More details:</b> 
+            Many systems are naturally designed (consciously or not) over a variable number of certain resources, which can mean physical or logical entities. Examples of such resources include:
+    <ul>
+    <li>the number of physical components of a certain functional type,</li>
+    <li>the number of clients that simultaneously request a service from a server,</li>
+    <li>the capacity of the communication channel between components,</li>
+    <li>the number of context switches permitted among concurrent threads,</li>
+    <li>the recursion nesting depth (= stack size) permitted in a piece of software.</li>
+    </ul>
+    We can expect that the behavior of the instances of the parametric design family (= the concrete designs for each parameter choice) depend on the parameter in a smooth, "continuous" way. This enables analyses of the function that maps the number of resource instances (= the parameter) to a concrete design (this function goes from the natural numbers to the design space).
+    More concretely, suppose k is an integral parameter of the design. With the target property P to be verified in mind, we define a function O mapping the parameter to observations about the design of size k, such that knowledge of O(k) enables a decision on whether P holds of the instance of size k. For example, the "observation" could simply be the set of states reachable in the system of size k.
+    In general, we require of function O that it be monotone: more resources means more system behaviors (observations). This is almost always the case provided the value of k is not accessible in the program defining a system instance's behavior. (If it is, the dependence on k can be arbitrary, making analysis against unbounded k in general impossible.)
+    We now analyze the system design for increasing values of k. Due to monotonicity of O, consecutive observation sets O(k) are in some sort of ≤ relationship. This begs the question whether the function O converges at some parameter point k0, i.e. whether it stops increasing after reaching k0. If so, the truth value of property P has stabilized, i.e. unless we have detected a violation of P up to this point, we have proved the property for all parameter instances.
+    </p>
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-6">
-            <h2 class="header-light regular-pad">Research sponsors:</h2>
-        </div>
+      <h2 class="header-light regular-pad">Research Sponsors:</h2>
     </div>
-    
+    <br>
     <div class="row">
         <div class="col-md-6" align="center">
             <img src="img/nsf-logo.png" alt="" class="img-responsive">
