--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <div class="container">
         <h2>Resource-Aware Program Analysis using Observation Sequences</h2>
         <p>Reasoning about programs from the perspective of resources</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/apps/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ "/apps/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
     </div>
 </div>
 
