--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ layout: default
     <h2 class="header-light regular-pad">About RAPA</h2>
     <p class="lead"><b>Short version:</b> Verification techniques analyze
       software (or hardware) for bugs: behaviors that are
-      unexpected, unwanted, and can cause the software to end
+      unwanted, often unexpected, and can cause an application to end
       up in an unworkable state, crash, or simply compute
       wrong results. This project develops a verification
       technique that exploits the fact that most
       software systems are designed over a variable number of
-      resources. How do changes (especially incremental
-      changes) of the resource parameter affect the behavior
+      <i>resource instances</i>. How do changes (especially incremental
+      changes) of the instance parameter affect the behavior
       of the software?</p> 
     <!--div class="col-md-6 text-center">
     <img src="img/jekyll-dark.png" alt="" class="img-responsive">
@@ -89,7 +89,7 @@ layout: default
     <p>
     We now analyze the system design for increasing values of <code>k</code>. Due
     to monotonicity of O, consecutive observation sets  <code>O(k)</code> are in
-    some sort of <code>â‰¤</code> relationship. This begs the question whether the
+    some sort of <code>¡Ü</code> relationship. This begs the question whether the
     function <code>O</code> converges at some parameter point k0, i.e. whether it
     stops increasing after reaching <code>k0</code>. If so, the truth value of
     property <code>P</code> has stabilized, i.e. unless we have detected a
