Fixed encoding error

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: default
     <p>
     We now analyze the system design for increasing values of <code>k</code>. Due
     to monotonicity of O, consecutive observation sets  <code>O(k)</code> are in
-    some sort of <code>¡Ü</code> relationship. This begs the question whether the
+    some sort of <code>â‰¤</code> relationship. This begs the question whether the
     function <code>O</code> converges at some parameter point k0, i.e. whether it
     stops increasing after reaching <code>k0</code>. If so, the truth value of
     property <code>P</code> has stabilized, i.e. unless we have detected a
